# explainprompt

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml  rollup.config.js  setup.cfg  tsconfig.json
css/: prompt.css  walkthrough.css
docs/: CNAME  index.html
docs/css/: common.css  index.css  walkthrough.css
docs/js/: diagram.js  walkthrough.js
docs/papers/: chain-of-thought.html  plan-and-solve.html  react.html  reflexion.html  self-notes.html  toolformer.html  zero-shot-reasoners.html
docs/papers/plan-and-solve/: index.html
docs/papers/toolformer/: index.html
js/: package-lock.json  package.json  rollup-widget.config.js  rollup.config.js  tsconfig.json  walkthrough.js
js/src/: StepContext.tsx  Widget.tsx  index.ts  parser.ts
js/src/components/: BlockFactory.tsx  BlockList.tsx  BlockStream.tsx  CodeSection.tsx  ContentBlock.tsx  ContentSection.tsx  ContentSpan.tsx  NamedBlock.tsx  Pagination.tsx
notebooks/: example.ipynb  langchain.ipynb
papers/chain-of-thought/: index.html
papers/chain-of-thought/prompts/: few-shot.html  zero-shot.html
papers/plan-and-solve/prompts/: zero-shot.html
papers/react/: index.html
papers/react/prompts/: few-shot.html  finetuned.html
papers/reflexion/: index.html
python/: .gitignore  pyproject.toml  setup.cfg
python/explainprompt/: __init__.py  prompt_crafting.py
python/explainprompt/jupyter/: __init__.py  explainprompt.js  widget.css  widget.js  widget.py
python/explainprompt/logger/: __init__.py  logger.py
python/explainprompt/model/: __init__.py  data_model.py
(+7 files in other folders)
