[metadata]
name = explainprompt
version = attr: explainprompt.__version__
description = A tool for explaining large language model prompts
long_description = file: README.md, LICENSE.md

[options]
zip_safe = False
include_package_data = True
packages = explainprompt
install_requires =
    ; python_version >= "3.9"

[options.package_data]
* = *.toml, *.j2